<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Ambulance Service</string>
	<string name="action_settings">Settings</string>
	<string name="address">Address</string>
	<string name="category">Category</string>
	<string name="name">Name</string>
	<string name="NEAS">NEAS</string>
	<string name="title_activity_select_hospital">SelectHospital</string>
	<string name="choose_hospital">Select hospital</string>
	<string name="choose_category">Choose Category</string>

	<string-array name="hospital_options">
		<item>Select Hospital</item>
		<item>Newcastle General</item>
		<item>Royal Victoria Infirmary</item>
		<item>Newcastle Freeman Hospital</item>
		<item>Not applicable</item>
	</string-array>
	<string-array name="category_choices">
		<item>Select Category</item>
		<item>R1</item>
		<item>R2</item>
		<item>G1</item>
		<item>G2</item>
		<item>Not applicable</item>
	</string-array>

	<string name="title_activity_patient_details">PatientDetails</string>
	<string name="title_activity_known_allergies">KnownAllergies</string>
	<string name="title_activity_job_found">JobFound</string>
	<string name="title_activity_reset_password">ResetPassword</string>
	<string name="title_activity_change_password">ChangePassword</string>
	<string name="title_activity_shut_down">ShutDown</string>
	<string name="title_activity_message_hospital">MessageHospital</string>
	<string name="resetPassword">Reset Password</string>
	<string name="enterUsername">Enter Username</string>
	<string name="enterPassword">Enter Password</string>
	<string name="enterAccessCode">Enter Access Code</string>
	<string name="loginButton">Login</string>
	<string name="logoutButton">Log out</string>
	<string name="showMap">Show Map</string>
	<string name="contactNumber">Contact Number</string>
	<string name="incidentDetails">Details</string>
	<string name="nhsID">NHS ID</string>
	<string name="dob">Date of Birth</string>
	<string name="bloodType">Blood type</string>
	<string name="weight">Weight</string>
	<string name="knownAllergies">Known Allergies</string>
	<string name="knownMedicine">Known Medicine</string>
	<string name="buttonAllergies">More details</string>
	<string name="buttonMedicine">More details</string>
	<string name="arrived">Arrived</string>
	<string name="distance">Distance</string>
	<string name="confirm">Confirm</string>
	<string name="enterMessage">Enter Message</string>
	<string name="send">Send</string>
	<string name="back">Back</string>
	<string name="searchQuery">Enter Search Query</string>
	<string name="search">Search</string>
	<string name="changePasswordMessage">Reset your password.  Must be more than 8 characters, with upper and lower case text and contain a digit</string>
	<string name="typeNewPassword">Type a new password</string>
	<string name="retypePassword">Type a new password</string>
	<string name="close">Close</string>
	<string name="contactAdmin">Contact your administrator who will give you a code to log in</string>
	<string name="enterAdminCode">Enter code</string>
	<string name="submit">Submit</string>
	<string name="loginPage">Login Page</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="exit">Exit</string>
	<string name="unauthorized">This device is not authorised to connect to the server. Please contact the administrator</string>
	<string name="enterTreatmentDetails">Enter treatment details</string>
</resources>