<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="10dp" >

	<TextView
		android:id="@+id/tvUsername"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/enterUsername" />

	<EditText
		android:id="@+id/etUserName"
		android:layout_width="257dp"
		android:layout_height="40dp"
		android:ems="10"
		android:inputType="textNoSuggestions|textVisiblePassword"
		android:textSize="12sp" />

	<TextView
		android:id="@+id/tvPassword"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/enterPassword" />

	<EditText
		android:id="@+id/etPassword"
		android:layout_width="260dp"
		android:layout_height="40dp"
		android:ems="10"
		android:inputType="textPassword|textNoSuggestions"
		android:textSize="12sp" />

	<TextView
		android:id="@+id/tvAccessCode"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/enterAccessCode" />

	<EditText
		android:id="@+id/etGenCode"
		android:layout_width="260dp"
		android:layout_height="40dp"
		android:ems="10"
		android:inputType="numberDecimal"
		android:textSize="12sp" />

	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" >

		<Button
			android:id="@+id/bWaitScreenLogin"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="40dp"
			android:text="@string/loginButton" />

		<Button
			android:id="@+id/bWaitScreenLogOut"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="30dp"
			android:layout_toRightOf="@id/bWaitScreenLogin"
			android:text="@string/logoutButton" />
	</RelativeLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" >

		<Button
			android:id="@+id/bLoginResetPassword"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:text="@string/resetPassword" />
	</LinearLayout>

</LinearLayout>